# redcrow0.1

./: README.md  pyproject.toml
src/redcrow/: crew.py  main.py
src/redcrow/config/: agents.yaml  tasks.yaml
